# 2024-visual-slam

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
app/ROS2/VIO/: CMakeLists.txt  package.xml
app/ROS2/VIO/src/: rgbd_vio_node.cpp  rgbd_vio_node.hpp  run_ros2.cpp
config/: config.yaml
include/: dataset.hpp  visual_odometry.hpp
src/: visual_odometry.cpp
